--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Vuex Todo Manager</title>
+    <title>Todos</title>
   </head>
   <body>
     <noscript>
